# kyouth-data-ai

./: .gitignore
week1/: README.md  main.py  pyproject.toml
week1/src/: ingestor.py  loader.py  processor.py  profiler.py
week2/: README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.py  rate_limits.txt  tag_data.py
week2/data/resources/: jobs_d1.db  resume_d3_eval.txt
week3/: .env.example  .gitignore  README.md  docker-compose.yml
week3/backend/: .dockerignore  Dockerfile  pyproject.toml
week3/backend/src/: app.py
week3/backend/src/week_2/: find_skill_gaps.py  rate_limits.txt  tag_data.py
week3/frontend/: Dockerfile  pyproject.toml
week3/frontend/src/: main.py
week3/frontend/src/templates/: chat_page.html
