[project]
name = "week3-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
    "uvicorn>=0.48.0",
]

[tool.uv]
required-version = ">=0.8.0,<0.9.0"
